--- a/source/_posts/量子力学.md
+++ b/source/_posts/量子力学.md
@@ -3,11 +3,12 @@ title: 量子力学
 date: 2020-03-23 00:00:04
 tags: 物理
 categories: 学习
+mathjax: true
 ---
-# 1 背景
+# 背景
 - 微观粒子运动不符合经典力学规律
 
-# 2 假设
+# 假设
 - 量子
 
 量子是能量的最小单位
@@ -16,8 +17,8 @@ categories: 学习
 
 物质符合波函数
 
-# 3 推论
-## 3.1 光电效应
+# 推论
+## 光电效应
 - 定义
 
 $$
@@ -28,7 +29,7 @@ $$
 
 光是由一份份的光子组成
 
-## 3.2 物质波
+## 物质波
 
 - 定义
 
@@ -44,7 +45,7 @@ $$
 
 物质符合波函数
 
-## 3.3 薛定谔波动方程
+## 薛定谔波动方程
 
 - 定义
 
@@ -56,7 +57,7 @@ $$
 
 粒子的动能加势能等于其总能量，且守恒。使用波函数构造等式
 
-# 4 本质
+# 本质
 
 - 物质符合波函数
 - 描述了粒子的物理逻辑
