--- a/source/_posts/广义相对论.md
+++ b/source/_posts/广义相对论.md
@@ -3,11 +3,12 @@ title: 广义相对论
 date: 2020-03-23 00:00:03
 tags: 物理
 categories: 学习
+mathjax: true
 ---
-# 1 背景
+# 背景
 - 万有引力定律存在误差
 
-# 2 假设
+# 假设
 - 等效原理
 
 引力和惯性力没有区别
@@ -16,8 +17,8 @@ categories: 学习
 
 一切物理定律在所有参考系中均等效
 
-# 3 推论
-## 3.1 引力场方程
+# 推论
+## 引力场方程
 - 定义
 
 $$
@@ -38,7 +39,7 @@ $$
 
 质能导致时空扭曲，扭曲的时空引导物质运动
 
-# 4 本质
+# 本质
 
 - 万有引力定律是错误的，是一种经验主义结论，存在误差
 - 爱因斯坦通过洛伦兹变换和张量等数学工具推导出了引力场表达式
