--- a/source/_posts/狭义相对论.md
+++ b/source/_posts/狭义相对论.md
@@ -3,8 +3,9 @@ title: 狭义相对论
 date: 2020-03-23 00:00:02
 tags: 物理
 categories: 学习
+mathjax: true
 ---
-# 1 背景
+# 背景
 - 洛伦兹变换和伽利略变换不相符
 
 洛伦兹变换由麦克斯韦方程组等电磁理论推导得出，伽利略变换由经验猜测得出
@@ -17,7 +18,7 @@ categories: 学习
 
 不同方向或者参考系的光速测量结果不变
 
-# 2 假设
+# 假设
 - 狭义相对性原理
 
 一切物理定律（除引力）在所有惯性系中均等效，符合洛伦兹变换
@@ -26,8 +27,8 @@ categories: 学习
 
 光在真空中总是以确定的速度c传播，速度的大小同光源的运动状态无关
 
-# 3 推论
-## 3.1相对长度
+# 推论
+## 相对长度
 - 定义
 
 $$
@@ -48,7 +49,7 @@ $$
 
 物体的长度，在运动方向变短
 
-## 3.2 相对时间间隔
+## 相对时间间隔
 
 - 定义
 
@@ -73,7 +74,7 @@ $$
 
 物体的事件耗时，在运动方向相对变大
 
-## 3.3 相对速度
+## 相对速度
 
 - 定义
 
@@ -94,7 +95,7 @@ $$
 
 物体的相对速度，符合洛伦兹变换
 
-## 3.4 相对质量
+## 相对质量
 
 - 定义
 
@@ -119,7 +120,7 @@ $$
 
 物体的相对质量，符合洛伦兹变换
 
-## 3.5 质能方程
+## 质能方程
 
 - 定义
 
@@ -131,7 +132,7 @@ $$
 
 质量是能量的一种表现形式
 
-# 4 本质
+# 本质
 
 - 相对速度简单叠加是错误的，是一种经验主义结论
 - 洛伦兹通过数学公式推导出了真实的物质逻辑关系
